# affs-read

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  PERFORMANCE.md  README.md  deny.toml
.github/workflows/: ci.yml  release.yml
benches/: checksums.rs  hashing.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_blocks.rs  fuzz_checksum.rs  fuzz_names.rs  fuzz_read.rs
src/: block.rs  checksum.rs  constants.rs  date.rs  dir.rs  error.rs  file.rs  lib.rs  reader.rs  symlink.rs  types.rs  utf8.rs  varblock.rs
tests/: integration_tests.rs
