[package]
name = "affs-read"
version = "0.3.0"
edition = "2024"
description = "A no_std compatible crate for reading Amiga Fast File System (AFFS) disk images"
documentation = "https://github.com/MuntasirSZN/affs-read"
license = "MIT"
keywords = ["amiga", "filesystem", "adf", "affs", "no_std"]
categories = ["no-std", "filesystem", "embedded", "parser-implementations"]

[features]
default = ["std"]
std = []
alloc = []
perf-simd = []
perf-asm = []

[dependencies]
# SIMD optimizations (no_std compatible)
wide = { version = "0.7", default-features = false, optional = true }
# For safe memory operations
bytemuck = { version = "1.14", default-features = false, optional = true }

[dev-dependencies]
# Benchmarking
divan = "0.1"

[[bench]]
name = "checksums"
harness = false

[[bench]]
name = "hashing"
harness = false
