[package]
name = "affs-read"
version = "0.3.0"
edition = "2024"
description = "A no_std compatible crate for reading Amiga Fast File System (AFFS) disk images"
documentation = "https://github.com/MuntasirSZN/affs-read"
license = "MIT"
keywords = ["amiga", "filesystem", "adf", "affs", "no_std"]
categories = ["no-std", "filesystem", "embedded", "parser-implementations"]

[features]
default = ["std"]
std = []
alloc = []

[dependencies]

[dev-dependencies]
divan = "0.1"

[[bench]]
name = "checksums"
harness = false

[[bench]]
name = "hashing"
harness = false
